Fix broken builds

--- a/.github/workflows/make-release.yml
+++ b/.github/workflows/make-release.yml
@@ -16,7 +16,7 @@ jobs:
           DEVELOPER_DIR: /Applications/Xcode_11.7.app/Contents/Developer
         run: |
           sudo xcode-select -switch /Applications/Xcode_11.7.app
-          xcodebuild -project Space\ Bandits/Space\ Bandits.xcodeproj -scheme "Invaders09" build CONFIGURATION_BUILD_DIR=`pwd`/build
+          xcodebuild -project MacInvaders09.xcodeproj -scheme "Invaders09" build CONFIGURATION_BUILD_DIR=`pwd`/build
           cd build
           tar cvf MacInvaders09.tgz *.app
 
